# gn

./: CMakeLists.txt  CMakePresets.json
examples/: 01_helloworld.cpp  02_hellotriangle.cpp  CMakeLists.txt  example_def.h  example_lib.cpp  example_lib.h
examples/basic/: CMakeLists.txt
examples/basic/hello_triangle/: hello_triangle.cpp  hello_triangle.frag  hello_triangle.frag.spv  hello_triangle.vert  hello_triangle.vert.spv
examples/basic/hello_world/: CMakeLists.txt  hello_world.cpp
examples/basic/index_buffer/: CMakeLists.txt  index_buffer.cpp
examples/basic/staging_buffer/: CMakeLists.txt  staging_buffer.cpp
examples/basic/triangle/: CMakeLists.txt  shader.vert  triangle.cpp  triangle.frag
examples/basic/vertex_buffer/: CMakeLists.txt  shader.frag  vertex_buffer.cpp  vertex_buffer.vert
examples/compute_basic/: 01_hellocompute.comp  01_hellocompute.comp.spv  01_hellocompute.cpp
examples/compute_basic/hello_compute/: CMakeLists.txt  hello_compute.comp.spv  hello_compute.cpp
include/gn/: gn.h  gn_core.h  gn_detail.h  gn_impl.h  gn_impl_d3d11.h  gn_impl_d3d12.h  gn_impl_vulkan.h
include/gnsl/: gnsl.h  gnsl_frontend.h  gnsl_impl.h
src/: gn_impl_stub.cpp  gnsl_impl_stub.cpp
test/: CMakeLists.txt  barrier_conv_test.cpp  device_test.cpp  expect_test.cpp  gnsl_test_bootstrapper.cpp  impl_stub.cpp  instance_test.cpp  test_common.h
test/gnsl_test_case/: 00001.gnsl  func_decl.gnsl
